src/blocks/testimonials/editor.scss
/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */
 @import './slick.scss';
 .wp-block-kadence-testimonials {
	.kt-blocks-carousel {
		padding-bottom: 35px;
	}
	.kt-blocks-carousel.kt-carousel-container-dotstyle-none {
		padding-bottom: 0;
	}
	.kt-blocks-carousel .slick-slider:not(.kt-carousel-arrowstyle-none) {
		padding-left: 35px;
		padding-right: 35px;
	}
}
 .kt-spacer-sidebar-15 {
	 height: 15px;
 }
 .kt-testimonial-item__move-menu {
    display: none;
    position: absolute;
	right: 0;
	top:0;
	z-index: 100;
}
.kt-testimonial-item-wrap:hover .kt-testimonial-item__move-menu {
    display:inline-flex;
}
 .kt-testimonial-item__move-menu .components-button {
	padding: 4px;
	height: 30px;
    min-width: 30px;
	width: 30px;
	border:1px solid transparent;
	background:rgba(255,255,255,.8);
	&:focus:enabled {
		border-color: transparent;
		outline: 0;
		outline-offset: 0;
		box-shadow: none;
		color: #555d66;
	}
	&:hover {
		border:1px solid #555d66;
		color: #555d66;
	}
}
.components-button-group.kt-style-btn-group button.components-button.kt-style-btn {
    width: 50%;
    border: 0;
    height: auto;
    border-radius: 0;
    background: transparent !important;
    padding: 8px;
    border: 2px solid transparent;
    box-shadow: none;
}
.components-button-group button.components-button.kt-style-btn svg {
    width: 100%;
}
.kt-style-btn-group {
	margin-bottom: 10px;
	border:0;
}
.components-button-group .components-button.is-primary.kt-style-btn, .components-button-group .components-button.kt-style-btn:focus {
    border-color: #aaaaaa;
    background:transparent;
    outline:0;
    box-shadow:none;
}
.components-button-group button.components-button.kt-style-btn:hover {
    border-color: #eeeeee;
}
 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 30px 30px;
}
.kt-testimonial-columns-1 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
    grid-template-columns: 1fr;
}
.kt-testimonial-columns-2 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
	grid-template-columns: 1fr 1fr 1fr;
}
.kt-testimonial-columns-3 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
	grid-template-columns: 1fr 1fr 1fr;
}
.kt-testimonial-columns-4 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
    grid-template-columns: 1fr 1fr 1fr 1fr;
}
.kt-testimonial-columns-5 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}
.kt-testimonial-grid-wrap .kt-testimonial-item-wrap {
    width: 100%;
}
 .kt-testimonial-media-inner-wrap {
    overflow: hidden;
	border: 0 solid transparent;
	width: 60px;
	margin: 0 15px 0 0;
	border-radius: 100%;
	.kadence-testimonial-image-intrisic {
		padding-bottom: 100%;
		height: 0;
		position: relative;
	}
	.kt-testimonial-image {
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
		width: 100%;
		height: 100%;
		position: absolute;
		left: 0;
		padding: 0;
		border-radius: 100%;
	}
	.kt-testimonial-image-placeholder {
		background: #f2f2f2;
		width: 100%;
		height: 100%;
		border-radius: 100%;
		justify-content: center;
		position: absolute;
		left:0;
		top:0;
	}
	.kt-svg-testimonial-icon {
		position: absolute;
		width: 100%;
		height: 100%;
	}
}
.kt-testimonial-item-wrap {
    border: 0 solid transparent;
    max-width: 500px;
	text-align: center;
	margin: 0 auto;
	position: relative;
}
.kt-testimonial-meta-wrap {
    display: flex;
    justify-content: center;
	align-items: center;
	margin-top: 10px;
	.kt-testimonial-meta-name-wrap {
		text-align: left;
	}
}
.kt-svg-testimonial-global-icon {
	border: 2px solid #eeeeee;
	border-radius: 100%;
	background: transparent;
	color: #444444;
	padding: 20px;
}
.kt-svg-testimonial-global-icon-wrap {
	margin: 0 0 10px 0;
}
// Card
.kt-testimonial-style-card {
	.kt-testimonial-media-inner-wrap {
		width: auto;
		margin: 0 0 15px 0;
		border-radius: 0;
		.kadence-testimonial-image-intrisic {
			padding-bottom: 50%;
		}
		.kt-testimonial-image, .kt-testimonial-image-placeholder{
			border-radius: 0;
		}
	}
	.kt-testimonial-meta-wrap .kt-testimonial-meta-name-wrap {
		text-align: center;
	}
	&.kt-testimonials-icon-on.kt-testimonial-halign-center .kt-testimonial-item-wrap {
		text-align: left;
	}
	.kt-svg-testimonial-global-icon-wrap {
		float: left;
		margin: 0 10px 0 0;
	}
	&.kt-testimonial-halign-right .kt-svg-testimonial-global-icon-wrap {
		float:right;
	}
}
.kt-testimonial-style-card.kt-testimonial-halign-right .kt-testimonial-media-inner-wrap {
	margin: 0 0 15px 0;
}
// Bubble
.kt-testimonial-style-bubble {
	.kt-testimonial-text-wrap {
		border: 2px solid #eee;
		padding: 20px;
		position: relative;
		border-radius: 10px;
		&:after {
			height: 0;
			left: 50%;
			top: 100%;
			position: absolute;
			border-top: 14px solid #eee;
			border-bottom: 14px solid transparent;
			border-left: 14px solid transparent;
			border-right: 14px solid transparent;
			content: '';
			transform: translateX(-50%);
			width: 0;
		}
	}
	.kt-testimonial-meta-wrap {
		margin-top: 20px;
	}
	&.kt-testimonial-halign-left .kt-testimonial-meta-wrap {
		margin-left: 6px;
	}
	&.kt-testimonial-halign-left.kt-testimonials-media-off .kt-testimonial-meta-wrap {
		margin-left: 20px;
	}
	&.kt-testimonial-halign-right .kt-testimonial-meta-wrap {
		margin-right: 6px;
	}
	&.kt-testimonial-halign-right.kt-testimonials-media-off .kt-testimonial-meta-wrap {
		margin-right: 20px;
	}
	.kt-svg-testimonial-global-icon {
		background: #fff;
	}
	&.kt-testimonials-icon-on .kt-svg-testimonial-global-icon-wrap {
		margin: -55px 0 10px 0;
	}
	&.kt-testimonials-icon-on .kt-testimonial-item-wrap {
		padding-top: 55px;
	}
}
.kt-testimonial-halign-center.kt-testimonials-media-off .kt-testimonial-meta-wrap .kt-testimonial-meta-name-wrap {
    text-align:center;
}
// inline
.kt-testimonial-style-inlineimage {
	.kt-testimonial-media-wrap {
		float:left;
	}
	.kt-testimonial-text-wrap {
		border: 2px solid #eee;
		padding: 20px;
		position: relative;
		border-radius: 10px;
		text-align: left;
		&:after {
			height: 0;
			left: 20px;
			top: 100%;
			position: absolute;
			border-top: 14px solid #eee;
			border-bottom: 14px solid transparent;
			border-left: 14px solid transparent;
			border-right: 14px solid transparent;
			content: '';
			transform: none;
			width: 0;
		}
	}
	.kt-testimonial-meta-wrap {
		margin-top: 2px;
		justify-content: flex-start;
		padding-left: 60px;
		.kt-testimonial-meta-name-wrap {
			text-align: left;
			display: flex;
			.kt-testimonial-name-wrap {
				padding-right: 6px;
			}
		}
	}
	&.kt-testimonial-halign-right {
		.kt-testimonial-text-wrap {
			text-align: left;
		}
		.kt-testimonial-media-wrap {
			float: right;
		}
		.kt-testimonial-meta-wrap {
			padding-left: 0px;
			padding-right: 60px;
		}
	}
	.kt-svg-testimonial-global-icon {
		background: #fff;
	}
	&.kt-testimonials-icon-on .kt-svg-testimonial-global-icon-wrap {
		margin: -55px 0 10px 0;
	}
	&.kt-testimonials-icon-on .kt-testimonial-item-wrap {
		padding-top: 55px;
	}
}
.kt-testimonial-halign-left {
	.kt-testimonial-item-wrap {
		text-align: left;
		margin: 0;
		.kt-testimonial-meta-name-wrap {
			text-align: left;
		}
	}
	.kt-testimonial-meta-wrap {
		justify-content: flex-start;
	}
	.kt-testimonial-text-wrap:after {
		left: 20px;
		transform: none;
	}
}
.kt-testimonial-halign-right {
	.kt-testimonial-item-wrap {
		text-align: right;
		margin-left: auto;
		margin-right: 0;
		.kt-testimonial-meta-name-wrap {
			text-align: right;
		}
	}
	.kt-testimonial-meta-wrap {
		justify-content: flex-start;
		flex-direction: row-reverse;
	}
	.kt-testimonial-media-inner-wrap {
		margin: 0 0 0 15px;
	}
	.kt-testimonial-text-wrap:after {
		left: auto;
		right:20px;
		transform: none;
	}
}
.kt-testimonial-name a {
	color: inherit !important;
	text-decoration: underline;
}
.kt-testimonial-occupation a {
	color: inherit !important;
	text-decoration: underline;
}
.kt-testimonial-media-wrap .kt-remove-img.kt-testimonial-remove-image {
    position: absolute;
    left: 10px;
    top: 8px;
    z-index: 10000;
    font-size: 12px;
    background: red;
    border-radius: 50%;
    padding: 0;
    line-height: 1;
    color: white;
    width: 15px;
    min-width: 0;
	height: 15px;
	text-align: center;
}
.kt-testimonial-media-wrap .kt-testimonial-remove-image svg.dashicon {
    width: 1em;
    height: 1em;
}
.kt-testimonial-item-wrap.testimonial-valign-middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.kt-testimonial-item-wrap.testimonial-valign-bottom {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

